# azure-text-extractions

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
az_text_extractions/: hosting.py
az_text_extractions/models/: recognized_entities.py  sentence.py
az_text_extractions/protocols/: i_text_extraction_service.py
az_text_extractions/services/: text_extraction_service.py
data/: README.md  climate-change.txt  exercise-regularly.txt
infra/: README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.sample  text_analytics.tf
tests/az_text_extractions/models/: test_recognized_entities.py  test_sentence.py
tests/az_text_extractions/services/: test_text_extraction_service.py
